--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is namste react by Ritesh Bhosale",
-  "main": "App.js",
   "scripts": {
+    "start": "parcel index.html",
     "test": "jest"
   },
   "repository": {
@@ -24,5 +24,12 @@
   "homepage": "https://github.com/riteshhosale/namaste-react#readme",
   "devDependencies": {
     "parcel": "^2.16.3"
-  }
+  },
+  "dependencies": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
