Implement header, body, and restaurant card components; add CSS styles for layout and design

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is namste react by Ritesh Bhosale",
   "scripts": {
     "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
